<resources>
    <string name="app_name">Challenge Chapter Dua</string>
    <string name="gojek_atau_tokped">Disini nanti tempat untuk memilih tampilan Gojek atau Tokopedia</string>
    <string name="condesc_account_gojek">Tombol Account Gojek</string>
    <string name="search_hint">Cari layanan, makanan, &amp; tujuan</string>
    <string name="string_bayar">Bayar</string>
    <string name="string_eksplor">Eksplor</string>
    <string name="string_isi_saldo">Isi Saldo</string>
    <string name="text_goride">GoRide</string>
    <string name="text_gocar">GoCar</string>
    <string name="text_gofood">GoFood</string>
    <string name="text_gosend">GoSend</string>
    <string name="text_gomart">GoMart</string>
    <string name="text_gopulsa">GoPulsa</string>
    <string name="text_check_in">Check in</string>
    <string name="text_lainnya">Lainnya</string>
    <string name="text_info_harta_karun_atas">193 XP lagi ada harta karun</string>
    <string name="text_info_harta_karun_bawah">Harta Karun bentar lagi hilang</string>
    <string name="text_judul_akses_cepat">Akses Cepat</string>
    <string name="text_diskon_akses_cepat">Ada voucher nganggur, nih!</string>
    <string name="text_restoran_akses_cepat">Restoran Terdekat</string>
    <string name="text_iklan">"<b>Festival idaman Perempuan!</b> \nTemukan kebutuhan cantik-mu hemat pakai GoPay dengan cashback 50%. Klik!"</string>
    <string name="text_gopay_balance_value"><b>Rp109.048</b>\n<font color='#BB01A512'>Klik &amp; cek riwayat</font></string>
    <string name="text_gopay_balance_judul">gopay</string>
    <string name="cd_icon_gopay">icon gopay</string>
    <string name="cd_icon_bayar">icon bayar</string>
    <string name="cd_icon_isi_saldo">icon isi saldo</string>
    <string name="cd_icon_eksplor">icon eksplor</string>
    <string name="cd_icon_goride">icon goride</string>
    <string name="cd_icon_gocar">icon gocar</string>
    <string name="cd_icon_gofood">icon gofood</string>
    <string name="cd_icon_gosend">icon gosend</string>
    <string name="cd_icon_gomart">icon gomart</string>
    <string name="cd_icon_gopulsa">icon gopulsa</string>
    <string name="cd_icon_peduli_lindungi">icon peduli lindungi</string>
    <string name="cd_icon_lainnya">icon lainnya</string>
    <string name="cd_icon_bintang_club">icon bintang club</string>
    <string name="cd_icon_jam_pasir_club">icon jam pasir club</string>
    <string name="cd_icon_panah_club">icon panah club</string>
    <string name="cd_icon_diskon_akses_cepat">icon diskon akses cepat</string>
    <string name="cd_icon_panah_akses_cepat">icon panah akses cepat</string>
    <string name="cd_icon_restoran_akses_cepat">icon restoran akses cepat</string>
    <string name="cd_icon_panah_akses_cepat_2">icon panah akses cepat 2</string>
    <string name="cd_gambar_iklan">gambar iklan</string>
    <string name="text_navbar_home">Home</string>
    <string name="text_navbar_promo">Promo</string>
    <string name="text_navbar_pesanan">Pesanan</string>
    <string name="text_navbar_chat">Chat</string>
    <string name="cd_icon_home_navbar">icon home navbar</string>
    <string name="cd_icon_promo_navbar">icon promo navbar</string>
    <string name="cd_icon_pesanan_navbar">icon pesanan navbar</string>
    <string name="cd_icon_chat_navbar">icon chat navbar</string>
    <string name="cd_icon_paylater">icon paylater</string>
    <string name="text_gopaylater_balance_judul">gopaylater</string>
    <string name="text_gopaylater_balance_value">Activate GoPaylater!\n<font color="#BB01A512">Tap to activate</font></string>
    <string name="cd_icon_gocoins">icon gocoins</string>
    <string name="text_gopay_coins_balance_judul"><b>gopay</b> coins</string>
    <string name="text_gocoins_balance_value"><b>0</b>\n<font color="#BB01A512">Tap for details</font></string>
    <string name="text_dummy">dummy</string>
    <string name="cd_icon_toolbar">icon toolbar</string>
    <string name="text_alamat_toolbar">Dikirim ke <b>Alamat Rumah Muhammad Husni Abdillah</b></string>
    <string name="text_wallet_balance"><b>Rp109.048</b>\n164.433 Coins</string>
    <string name="text_tokped_member_balance"><b>Member Gold</b>\n23 Kupon</string>
    <string name="text_main_menu_official">Official\nStore</string>
    <string name="text_main_menu_lihat_semua">Lihat\nSemua</string>
    <string name="text_main_menu_kebutuhan_harian">Kebutuhan\nHarian</string>
    <string name="text_main_menu_elektronik">Elektronik\n&amp; gadget</string>
    <string name="text_main_menu_bills">Top-up &amp;\nTagihan</string>
    <string name="text_main_menu_keuangan">Keuangan\n</string>
    <string name="text_main_menu_travel">Alat Tulis\n Kantor</string>
    <string name="text_main_menu_atk">Alat Tulis\n Kantor</string>
    <string name="text_submenu_pedulilindungi">Peduli\nLindungi</string>
    <string name="text_submenu_banggalokal">Bangga\nLokal</string>
    <string name="text_submenu_bazar">Bazar Hari\n ini</string>
    <string name="text_submenu_liveshop">Live\nShopping</string>
    <string name="text_submenu_tokpedseru">Tokopedia\nSeru</string>
    <string name="text_submenu_cod">Bayar di\ntempat</string>
    <string name="text_submenu_promosekitar">Promo di\nMalang</string>
    <string name="text_judul_livevideo_ijo"><font color="#63CF6A">Lihat Semua</font></string>
    <string name="text_judul_livevideo">Video menarik untukmu</string>
    <string name="text_tokped_navbar_home">Home</string>
    <string name="text_navbar_tokped_feed">Feed</string>
    <string name="text_navbar_officialstore">Official Store</string>
    <string name="text_tokped_navbar_wishlist">Wishlist</string>
    <string name="text_navbar_tokped_transaksi">Transaksi</string>
    <string name="cd_icon_main_menu">icon main menu</string>
    <string name="cd_icon_sub_menu">icon sub menu</string>
    <string name="cd_gambar_live_video">gambar live video</string>
    <string name="cd_icon_navbar">icon navbar</string>
    <string name="text_tokped_kejar_diskon">Kejar Diskon</string>
    <string name="text_tokped_berakhir_dalam">Berakhir dalam</string>
    <string name="text_tokped_jam_diskon">09 menit 26 detik</string>
    <string name="cd_image_diskon_tokped">image diskon</string>
</resources>